<resources>
    <!-- System Config-->
    <string name="app_name">贵阳森林防火</string>
    <string name="appinfo">主办单位：贵阳市生态文明建设委员会\n技术支持：北京航天泰坦科技股份有限公司</string>
    <string name="app_version">版本号：</string>
    <string name="dbname">DB_SLFH</string>
    <!--提示-->
    <string name="error_network">网络异常，请检查网络连接</string>
    <string name="error_loginempty">请输入用户名或密码</string>

    <string name="error_uploc2local">上传坐标到本地异常</string>
    <string name="error_uploc2server">上传坐标到服务器异常</string>

    <string name="error_getweather">获取森林火险数据失败</string>
    <string name="success_getweather">获取森林火险数据成功</string>

    <string name="error_getalarminfodetail">获取火警详细信息异常</string>

    <string name="error_getbackalarm">获取回警信息异常</string>


    <string name="success_uploc">上传坐标成功</string>
    <string name="success_upload">上报成功</string>
    <string name="failure_upload">上报失败</string>
    <string name="error_noticecountry">请选择通知区县</string>
    <string name="error_phonenumber">请输入正确的手机号或电话号码</string>


    <string name="imgs">最多可上传3张图片</string>


    <!--Dialog-->

    <string name="title_progress">正在上传</string>
    <string name="content_progress">上传中……</string>

    <string name="login_title">正在登陆</string>
    <string name="logining">登陆中……</string>


    <!--服务器地址-->
    <string name="serverhost">http://101.201.54.143:8027/</string>

    <!--
    <string name="serverhost">http://192.168.1.16:8040/</string>
-->

    <!--GIS服务地址-->
    <string name="gisserverhost">http://101.201.54.143:6080/arcgis/rest/services/OtitanFire/ThematicMap/FeatureServer</string>
    <string name="gisserverhost1">http://222.85.147.93:6080/arcgis/rest/services/GYSLFHService/ThematicMap/FeatureServer</string>

    <string name="zturl">http://101.201.54.143:6080/arcgis/rest/services/OtitanFire/ThematicMap/MapServer</string>
    <string name="zturl1">http://222.85.147.93:6080/arcgis/rest/services/GYSLFHService/ThematicMap/MapServer</string>
    <string name="zturl2">http://sampleserver6.arcgisonline.com/arcgis/rest/services/Census/MapServer</string>

    <string name="zturl3">http://101.201.54.143:6080/arcgis/rest/services/OtitanFire/ThematicMap/MapServer</string>

    <!--
    http://101.201.54.143:6080/arcgis/rest/services/OtitanFire/FireThematicMap/FeatureServer
-->

    <string name="startloc">开始定位</string>
    <string name="stoploc">停止定位</string>
    <string name="location_permission_denied">未获取定位权限</string>
    <!-- <string name="webserviceurl">http://101.201.54.143:8031/SMLY/FireService/SMLYService.asmx</string>-->
    <string name="webserviceurl">http://101.201.54.143:9011/GISService.asmx</string>
    <!--三维地形服务-->
    <string name="elevation_image_service">http://elevation3d.arcgis.com/arcgis/rest/services/WorldElevation3D/Terrain3D/ImageServer</string>


    <!--应用更新地址-->
    <string name="updateurl">http://101.201.54.143:8031/smly/apk/Version.xml</string>
    <!--安徽天地图-->
    <string name="ahtiditu">http://ahtdt.ahmap.gov.cn/arcgis/rest/services/AH_ELETest/MapServer</string>
    <string name="smimgurl">http://titanah.imwork.net:6080/arcgis/rest/services/SMLY/SMLY_YX/MapServer</string>

    <!--http://localhost:8031/SMLY/FireService/SMLYService.asmx-->
    <string name="track">开始轨迹跟踪</string>
    <string name="trackoff">停止轨迹跟踪</string>
    <string name="title_activity_login">注册</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">请输入姓名</string>
    <string name="error_field_phone_required">请输入手机号</string>
    <string name="error_field_phonenumber">请输入正确的手机号</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing emailcompletions."</string>
    <string name="phonenumber">手机号</string>
    <string name="realname">真实姓名</string>
    <string name="signin">注册</string>
    <string name="istrack">是否显示轨迹</string>
    <string name="resignin">更改登录</string>
    <string name="title_activity_settings">Settings</string>
    <string name="upalarm">上报火警</string>
    <string name="uptype">上报类型</string>
    <string name="title">标题</string>
    <string name="remark">备注</string>
    <string name="username">请输入用户名</string>
    <string name="password">请输入密码</string>
    <string name="login">登  录</string>
    <string name="resign">切换帐号</string>
    <string name="setting">设置</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="alarminfo">接警信息</string>
    <string name="rememberuser">记住用户</string>
    <string name="no_items">暂无数据</string>
    <string name="alarmentry">接警录入</string>
    <string name="backalarm">回警</string>
    <string name="userinfo">个人中心</string>
    <string name="alarmstatics">火情统计</string>
    <string name="uploction">上传轨迹</string>
    <string name="fireaddress">火警地址: </string>
    <string name="firestate">状态: </string>
    <string name="getfiretime">接警时间: </string>
    <string name="fireresource">报警来源: </string>

    <!--接警信息录入-->
    <string name="countrys">请选择区县</string>
    <string name="origin">请选择接警来源</string>
    <string name="status">请选择火情状态</string>


    <string name="inputalarm">接警录入</string>
    <string name="inputalarm_address">火情地址</string>
    <string name="inputalarm_orgin">火警来源</string>

    <string name="inputalarm_status">火情状态</string>


    <string name="inputalarm_lon">经度</string>
    <string name="inputalarm_lat">纬度</string>
    <string name="inputalarm_policecase">出警情况</string>
    <string name="inputalarm_policetime">出警时间</string>
    <string name="inputalarm_reporttime">上报时间</string>
    <string name="inputalarm_reportcase">上报情况</string>
    <string name="inputalarm_ssdq">所属地区</string>
    <string name="inputalarm_tel">电话号码</string>
    <string name="inputalarm_tel_hint">请输入11位手机号或8位电话号码</string>
    <string name="inputalarm_remark">备注</string>
    <string name="inputalarm_isWork">是否查岗</string>
    <string name="inputalarm_noticeAreaIDs">通知区县</string>
    <string name="inputalarm_dqid">通知地区ID</string>
    <string name="inputalarm_submit">提交</string>
    <string name="picselect_tip">图片最多只能选择三个</string>
    <string name="map_base">基础地图</string>
    <string name="map_img">影像地图</string>
    <string name="map_firerisk">森林火险图</string>
    <string name="select">请选择</string>
    <string name="upload">上   报</string>
    <string name="noinspect">不查岗</string>
    <string name="inspect">查岗</string>
    <string name="nodata">暂无数据</string>
    <string name="alarm_number">接警编号:</string>
    <string name="alarm_time">报警时间:</string>
    <string name="alarm_orgin">报警来源:</string>
    <string name="alarm_phonenumber">报警电话:</string>
    <string name="alarm_lon">经度:</string>
    <string name="alarm_lat">纬度:</string>
    <string name="alarm_backtime">回警时间</string>
    <string name="alarmback">回警</string>
    <string name="alarminfo_status">火情状态</string>
    <string name="alarminfo_isfire">是否火情</string>
    <string name="alarminfo_type">火情类型</string>
    <string name="backalarm_psrson">核实人员</string>
    <string name="backalarm_info">核实情况</string>
    <string name="firetype">火情类型</string>
    <string name="title_route_guide_demo">导航</string>
    <string name="monitor_preview">可见光视频</string>
    <string name="Antitheft_preview">防盗视频</string>
    <string name="Infrared_preview">红外视频</string>
    <string name="error_address">获取位置异常</string>
    <string name="confirm">确定位置</string>
    <string name="active">可用的</string>
    <string name="error">加载失败</string>
    <string name="loading">正在加载</string>
    <string name="notVisible">不可见</string>
    <string name="outOfScale">超出范围</string>
    <string name="unknown">未知</string>
    <string name="map_map3d">三维场景</string>
    <string name="plot_arrow">箭头</string>
    <string name="plot_firearea">火场范围</string>
    <string name="plot_firebreak">防火带</string>
    <string name="plot_firept">火点</string>
    <string name="plot_flag">旗帜</string>
    <string name="plot_save">保存</string>


</resources>
