<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
   >
    <data>
        <variable
            name="viewmodel"
            type="com.titan.gis.plot.PlotViewModel"/>
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        >
        <com.esri.arcgisruntime.mapping.view.MapView
            android:id="@+id/mapview"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/hsv_plottools"
            >
        </com.esri.arcgisruntime.mapping.view.MapView>

        <!--图层控制-->
        <ImageView
            style="@style/iv_maptools"
            android:layout_marginEnd="15dp"
            android:layout_gravity="end"
            android:layout_alignParentEnd="true"
            android:id="@+id/iv_layers"
            android:background="@color/white"
            android:src="@drawable/ic_layers"
            android:layout_marginTop="20dp"
            android:onClick="@{()->viewmodel.showLayers()}"
            android:foreground="?android:attr/selectableItemBackground"
            />
        <HorizontalScrollView
            android:id="@+id/hsv_plottools"
            android:layout_width="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_height="wrap_content">
            <RadioGroup
                android:id="@+id/rg_plottools"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">
                <!--箭头标绘-->
                <RadioButton
                    android:id="@+id/rb_arrow"
                    android:text="@string/plot_arrow"
                    style="@style/rb_plot"
                    android:onClick="@{()->viewmodel.onPlot(1)}"
                    android:drawableTop="@drawable/plot_arrow"
                    />
                <!--火场范围-->
                <RadioButton
                    android:id="@+id/rb_firearea"
                    android:text="@string/plot_firearea"
                    style="@style/rb_plot"
                    android:onClick="@{()->viewmodel.onPlot(2)}"
                    android:drawableTop="@drawable/plot_firearea"
                    />
                <!--防火带-->
                <RadioButton
                    android:id="@+id/rb_firebreak"
                    android:text="@string/plot_firebreak"
                    style="@style/rb_plot"
                    android:onClick="@{()->viewmodel.onPlot(3)}"
                    android:drawableTop="@drawable/plot_break"
                    />
                <!--火点-->
                <RadioButton
                    android:id="@+id/rb_firept"
                    android:text="@string/plot_firept"
                    style="@style/rb_plot"
                    android:onClick="@{()->viewmodel.onPlot(4)}"
                    android:drawableTop="@drawable/plot_firept"
                    />
                <!--旗帜-->
                <RadioButton
                    android:id="@+id/rb_flag"
                    android:text="@string/plot_flag"
                    style="@style/rb_plot"
                    android:onClick="@{()->viewmodel.onPlot(5)}"
                    android:drawableTop="@drawable/plot_flag"
                    />
                <!--旗帜-->
                <RadioButton
                    android:id="@+id/rb_save"
                    android:text="@string/plot_flag"
                    style="@style/rb_plot"
                    android:onClick="@{()->viewmodel.onSave()}"
                    android:drawableTop="@drawable/plot_flag"
                    />
            </RadioGroup>
        </HorizontalScrollView>


    </RelativeLayout>
</layout>
